# Xavpy-library

./: Dockerfile  LICENSE  README.md  f.py  pyproject.toml  pytest.ini  release.bat
.github/workflows/: ci.yml  python-publish.yml  tests.yml  update-changelog.yml
src/securewipe/: memory.py
tests/: Architechture.md  README.md  f.py  pyproject.toml  pytest.ini  setup.cfg  test_crypto.py  test_file.py  test_memory.py  test_os_erase.py  test_session.py
tests/src/securewipe/: __init__.py  _sodium.py  crypto.py  device.py  file.py  memory.py  os_erase.py  session.py  utils.py
tests/tests/: test_crypto.py  test_file.py  test_memory.py  test_os_erase.py  test_session.py  test_utils.py
