[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securewipe"
version = "1.1.0"
description = "A Python library for secure file deletion, in-memory secret handling, and cryptographic erasure."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Ordu Stephen Chinedu", email = "fordstphn@gmail.com" }
]
keywords = ["security", "privacy", "encryption", "secure deletion", "data sanitization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving",
]

# Mandatory runtime dependencies
dependencies = [
    "psutil>=5.9.0",
    "cryptography>=41.0.0"
]

# Optional dependencies
[project.optional-dependencies]
crypto = ["pynacl>=1.5.0"]

# Development & testing dependencies
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.0.0",
    "cryptography>=41.0.0"
]

[project.urls]
Homepage = "https://github.com/xavenordu/Xavpy-library"
Documentation = "https://github.com/xavenordu/Xavpy-library"
Repository = "https://github.com/xavenordu/Xavpy-library"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
securewipe = ["*.so", "*.dll"]
