[metadata]
name = securewipe
version = 0.1.0
description = A Python library for secure file deletion, in-memory secret handling, and cryptographic erasure.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ordu Stephen Chinedu
author_email = fordstphn@gmail.com
license = MIT
url = https://github.com/yourname/securewipe
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Security :: Cryptography
    Topic :: System :: Archiving
keywords = security, privacy, encryption, secure deletion, data sanitization

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    psutil>=5.9.0

[options.extras_require]
crypto =
    pynacl>=1.5.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = src/securewipe

[coverage:report]
show_missing = True
skip_covered = True

[flake8]
max-line-length = 88
extend-ignore = E203,W503
